[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Menus/Lobby.gd" type="Script" id=1]
[ext_resource path="res://Assets/GFX/GUI/stranger_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/GFX/GUI/test_level.png" type="Texture" id=3]
[ext_resource path="res://Assets/GFX/GUI/Background.png" type="Texture" id=4]
[ext_resource path="res://Assets/GFX/GUI/main_theme.tres" type="Theme" id=5]
[ext_resource path="res://Assets/GFX/GUI/chat_theme.tres" type="Theme" id=6]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftBox" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 288.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Label" type="Label" parent="HBoxContainer/LeftBox"]
margin_right = 288.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 2 )
text = "Survival Match"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/LeftBox"]
margin_top = 104.0
margin_right = 82.0
margin_bottom = 217.0
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="HBoxContainer/LeftBox/VBoxContainer"]
margin_right = 82.0
margin_bottom = 31.0
text = "Start"

[node name="Settings" type="Button" parent="HBoxContainer/LeftBox/VBoxContainer"]
margin_top = 41.0
margin_right = 82.0
margin_bottom = 72.0
text = "Settings"

[node name="Leave" type="Button" parent="HBoxContainer/LeftBox/VBoxContainer"]
margin_top = 82.0
margin_right = 82.0
margin_bottom = 113.0
text = "Leave"

[node name="Control" type="Control" parent="HBoxContainer/LeftBox"]
margin_top = 221.0
margin_right = 288.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/LeftBox"]
margin_top = 330.0
margin_right = 288.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 292.0
margin_right = 632.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="RightBox" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 636.0
margin_right = 964.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="Label" type="Label" parent="HBoxContainer/RightBox"]
margin_right = 328.0
margin_bottom = 31.0
text = "Players:"

[node name="Players" type="VBoxContainer" parent="HBoxContainer/RightBox"]
margin_top = 35.0
margin_right = 328.0
margin_bottom = 285.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Chat" type="VBoxContainer" parent="HBoxContainer/RightBox"]
margin_top = 289.0
margin_right = 328.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme = ExtResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/RightBox/Chat"]
margin_right = 328.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="ChatLines" type="VBoxContainer" parent="HBoxContainer/RightBox/Chat/ScrollContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 323.0
margin_bottom = 213.0
rect_min_size = Vector2( 318, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChatInput" type="LineEdit" parent="HBoxContainer/RightBox/Chat"]
margin_top = 222.0
margin_right = 328.0
margin_bottom = 251.0
clear_button_enabled = true
[connection signal="pressed" from="HBoxContainer/LeftBox/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftBox/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="HBoxContainer/LeftBox/VBoxContainer/Leave" to="." method="_on_Leave_pressed"]
[connection signal="text_entered" from="HBoxContainer/RightBox/Chat/ChatInput" to="." method="_on_ChatInput_text_entered"]
